syntax = "proto3";  //语法声明

package api; //包名
//生成pb  protoc --go_out=. user.proto
//        protoc --go-grpc_out=. user.proto
// 输出到当前目录
option go_package="../api";


// hello服务（可定义多个服务,每个服务可定义多个方法）
service UserService {
  // hello服务的入口
  rpc GetUser (UserRequest) returns (UserReply) {}
}

// 定义发送请求信息.
message UserRequest {
  // 定义发送的参数
  // 参数类型 参数名 标识号(不可重复)
  int64 id = 1;
}

// 定义响应信息
message UserReply {
  int64 id = 1;
  string name = 2;
  int32 age = 3;
}


